word wrap fixed

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -40,3 +40,11 @@ nav span {
     margin-top: 0;
   }
 }
+
+/* ~~~~~~~~~ pc responsive ~~~~~~~~~~~~~~~~~~ */
+
+@media screen and (min-width: 1024px) {
+  .profile {
+    display: none;
+  }
+}
